--- a/HW7/AM207_HW7.ipynb
+++ b/HW7/AM207_HW7.ipynb
@@ -58,15 +58,12 @@
     "\\begin{aligned}\n",
     "y_j &\\sim Poisson(5 \\cdot n_j \\cdot \\theta_j), \\quad j = 1, \\ldots, N\\\\\n",
     "\\theta_j &\\sim Gamma(\\alpha, \\beta), \\quad j = 1, \\ldots, N\\\\\n",
-    "\\mu &\\sim Gamma(a, b)\\\\\n",
-    "\\sigma^2 &\\sim Gamma(c, d)\n",
+    "\\alpha &\\sim Gamma(a, b)\\\\\n",
+    "\\beta &\\sim Gamma(c, d)\n",
     "\\end{aligned}\n",
-    "where $\\mu$ is the mean of the distribution of $\\theta_j$ and $\\sigma^2$ is the variance; $a, b, c, d$ are hyperparameters. \n",
+    "where $a, b, c, d$ are hyperparameters. \n",
     "\n",
-    "The relationship between the mean, variance and the shape parameters of the Gamma distribution is as follows:\n",
-    "\\begin{aligned}\n",
-    "\\mu = \\frac{\\alpha}{\\beta}, \\quad \\sigma^2 = \\frac{\\alpha}{\\beta^2}\n",
-    "\\end{aligned}\n",
+    "\n",
     "\n",
     "- Choose some reasonable values for $a, b, c, d$ based on common sense (i.e. your choices need not be based too heavily on the observed data).\n",
     "\n",
@@ -74,11 +71,11 @@
     "\n",
     "- Analytically derive the full conditional, up constants that are inconsequential for sampling, for each variable in the model. \n",
     "  \n",
-    "  The a possible set of correct final forms of your conditionals looks like the following:\n",
+    "  A possible set of correct final forms of your conditionals looks like the following:\n",
     "      \n",
     "\\begin{aligned}\n",
     "p(\\theta_j | y_j, \\mu, \\sigma) &\\propto Gamma\\left(\\theta_j; y_j + \\alpha, \\beta + 5n_j\\right)\\\\\n",
-    "p(\\alpha, \\beta | y_j, \\theta_j, \\sigma^2) &\\propto \\prod_j\\theta_j^{\\alpha} \\exp\\left\\{ - \\beta\\sum_j \\theta_j \\right\\} * Gamma\\left(\\frac{\\alpha}{\\beta}; a, b \\right) * Gamma\\left(\\frac{\\alpha}{\\beta^2}; c, d \\right) * \\left\\vert \\frac{\\alpha}{\\beta^4}\\right\\vert\\\\\n",
+    "p(\\alpha, \\beta | y_j, \\theta_j, \\sigma^2) &\\propto \\prod_j\\theta_j^{\\alpha} \\exp\\left\\{ - \\beta\\sum_j \\theta_j \\right\\} * Gamma\\left(\\alpha; a, b \\right) * Gamma\\left(\\beta; c, d \\right) \\\\\n",
     "\\end{aligned}\n",
     "\n",
     "\n",
