final final hw7

--- a/HW7/AM207_HW7.ipynb
+++ b/HW7/AM207_HW7.ipynb
@@ -64,11 +64,6 @@
     "where $a, b, c, d$ are hyperparameters. \n",
     "\n",
     "\n",
-    "\n",
-    "- Choose some reasonable values for $a, b, c, d$ based on common sense (i.e. your choices need not be based too heavily on the observed data).\n",
-    "\n",
-    "\n",
-    "\n",
     "- Analytically derive the full conditional, up constants that are inconsequential for sampling, for each variable in the model. \n",
     "  \n",
     "  A possible set of correct final forms of your conditionals looks like the following:\n",
@@ -80,9 +75,26 @@
     "\n",
     "\n",
     "\n",
-    "- Implement a Metropolis-Hastings-in-Gibbs sampler to produce at least 1000 sets of theta-values, $\\{ \\theta_j: j = 1, \\ldots, N\\}$. Note that for updating some variables, you may need to use a Metropolis-Hastings step (see Rat Tumor example). You must choose your own appropriate burn-in rate, proposal distributions and number of samples to draw. You are also responsible for performing your own convergence tests and diagnostics.\n",
+    "- Implement a Metropolis-Hastings-in-Gibbs sampler to produce sets of theta-values, $\\{ \\theta_j: j = 1, \\ldots, N\\}$. Note that for updating some variables, you may need to use a Metropolis-Hastings step (see Rat Tumor example). \n",
     "\n",
-    "(**Hint:** to sanity check your implementation, you may wish to implement this model in PyMC3 and compare your results.)\n",
+    "  We suggest the following settings for your MH-in-Gibbs sampler, but please feel free to use your own:\n",
+    "  \n",
+    "  - Gibbs sweeps: 1000\n",
+    "  - $a = 9, b = 6, c = 9, d = 0.00001$\n",
+    "  - $\\alpha_0 = \\alpha_{\\text{emperical bayes}}, \\beta_0 = \\beta_{\\text{emperical bayes}}$\n",
+    "  - proposal distribution: $\\mathcal{N}\\left([\\alpha, \\beta], \\left[\\begin{array}{cc} 0.1 & 0 \\\\ 0 & 1000\\end{array}\\right]\\right)$\n",
+    "  - burn in: 10%\n",
+    "  - thinning: 2\n",
+    "  \n",
+    "  We do not guarantee convergence after 1000 sets of samples under these conditions. In fact, ***convergence is highly unlikely after only 1000 Gibbs sweeps***. \n",
+    "\n",
+    "  You are responsible for performing your own convergence tests and diagnostics.\n",
+    "\n",
+    "  **Note:** to sanity check your implementation, you may wish to implement this model in PyMC3 and compare your results.\n",
+    "  \n",
+    "  \n",
+    "\n",
+    "- **Extra Credit:** Tweak the settings in your sampler (including number of sweeps) in order to achieve convergence.\n",
     "\n",
     "\n",
     "\n",
@@ -92,7 +104,7 @@
     "\n",
     "- Compare the estimates obtained from your hierarchical model and those obtained from your model in Part A. Which model is preferable?\n",
     "\n",
-    "(**Note:** again, there is no \"right answer\", especially since your sampler may not have converged after 1000 sweeps, depending on your initialization. If you wish, you may run your sampler for longer iterations or tune your Metropolis Hastings step to achieve better performance, but this is not required. We expect you to form a reasonable  conclusion based on experimental results, lecture, reading, and Google)"
+    "  **Note:** again, there is no \"right answer\", especially since your sampler most likely did not converge after 1000 sweeps, under our settings. Here, we expect you to form a reasonable  conclusion based on experimental results, lecture, reading, and Google. You can certainly incorporate the difficulty of getting your sampler to converge as part of your comparison of the two methods."
    ]
   },
   {
