final final hw7

--- a/HW7/AM207_HW7.ipynb
+++ b/HW7/AM207_HW7.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "\n",
     "### Part B: Full Bayes\n",
-    "Rather than estimating the hyperparameters $\\alpha, \\beta$ from the data, in a full Bayesian model we would put additional priors on quantity of which we are uncertain. That is, we can model the kidney cancer rates using a *hierarchical model*.\n",
+    "Rather than estimating the hyperparameters $\\alpha, \\beta$ from the data, in a full Bayesian model we would put additional priors on quantities of which we are uncertain. That is, we can model the kidney cancer rates using a *hierarchical model*.\n",
     "\\begin{aligned}\n",
     "y_j &\\sim Poisson(5 \\cdot n_j \\cdot \\theta_j), \\quad j = 1, \\ldots, N\\\\\n",
     "\\theta_j &\\sim Gamma(\\alpha, \\beta), \\quad j = 1, \\ldots, N\\\\\n",
