--- a/HW7/AM207_HW7.ipynb
+++ b/HW7/AM207_HW7.ipynb
@@ -89,7 +89,7 @@
     "  - burn in: 10%\n",
     "  - thinning: 10\n",
     "  \n",
-    "  We do not guarantee convergence after 100,000 sets of samples under these conditions. In fact, ***convergence is highly unlikely after only 1000 Gibbs sweeps***. \n",
+    "  We do not guarantee convergence after 100,000 sets of samples under these conditions. In fact, ***convergence in a untweaked sampler is highly unlikely after only 100000 Gibbs sweeps***. \n",
     "\n",
     "  You are responsible for performing your own convergence tests and diagnostics.\n",
     "\n",
@@ -144,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
