--- a/HW8/AM207_HW8.ipynb
+++ b/HW8/AM207_HW8.ipynb
@@ -74,7 +74,7 @@
     "$$\n",
     "\n",
     "\n",
-    "Derived the joint distribution and sample from it using Gibbs sampling.\n",
+    "Derived the joint posterior $p(\\theta, z | y)$ and sample from it using Gibbs sampling.\n",
     "\n",
     "Visualize the distribution of theta and, from this distribution, estimate the probability of obtaining a type 4 child plant (with the blue rings) in any cross-breeding experiment."
    ]
