--- a/HW8/AM207_HW8.ipynb
+++ b/HW8/AM207_HW8.ipynb
@@ -47,13 +47,13 @@
     "The owners of the nursery, being top students in AM207, decided to model the experiment in hopes of discovering $\\theta$ using the results from their 197 initial experiments. \n",
     "\n",
     "They chose to model the observed data using a multinomial model and thus calculated the likelihood to be:\n",
-    "$$ p(y | \\theta) \\propto (2+\\theta)^{y_1} (1-\\theta)^{y_2+y_3}  \\, \\theta^{y_4}\n",
+    "$$ p(y  \\vert  \\theta) \\propto (2+\\theta)^{y_1} (1-\\theta)^{y_2+y_3}  \\, \\theta^{y_4}\n",
     "$$\n",
     "\n",
     "Being good Bayesians, they also imposed a prior on $\\theta$, $\\rm{Beta}(a, b)$.\n",
     "\n",
     "Thus, the posterior is:\n",
-    "$$ p(\\theta| Y) = \\left( 2+\\theta \\right)^{y_1} (1-\\theta)^{y_2+y_3} \\, \\theta^{\n",
+    "$$ p(\\theta \\vert  Y) = \\left( 2+\\theta \\right)^{y_1} (1-\\theta)^{y_2+y_3} \\, \\theta^{\n",
     "y_4} \\, \\theta^{a-1} \\, (1-\\theta)^{b-1}. $$\n",
     "\n",
     "If the nursery owners are able to sample from the posterior, they would be understand the distribution of $\\theta$ and make appropriate estimates."
@@ -65,28 +65,19 @@
    "source": [
     "### Part A: Sampling using data augmentation\n",
     "\n",
-    "Realizing that it would be difficult to sample from the posterior directly and after being repeated frustrated by attempts of Metropolis-Hastings and Gibbs sampling for this model, the nursery owners decided to augment their model and hopefully obtain friendlier looking distribution that allows for easy sampling.\n",
+    "Realizing that it would be difficult to sample from the posterior directly and after being repeatedly frustrated by attempts of Metropolis-Hastings and Gibbs sampling for this model, the nursery owners decided to augment their model and hopefully obtain friendlier looking distribution that allows for easy sampling.\n",
     "\n",
     "They augment the data with a new variable $z$ such that:\n",
     "$$z + (y_1 - z) = y_1.$$\n",
     "That is, using $z$, we are breaking $y_1$, the number of type I child plants, into two subtypes. Let the probability of obtain the two subtype be $1/2$ and $\\theta/4$, respectively. Now, we can interpret $y_1$ to be the total number of trials in a binomial trial. Thus, the new likelihood can be written as\n",
-    "$$ p(y, z | \\theta) \\propto {y_1 \\choose z} \\left (\\frac{1}{2} \\right )^{y_1-z} \\left(\\frac{\\theta}{4} \\right )^{z}  (1-\\theta)^{y_2+y_3}  \\, \\theta^{y_4}\n",
+    "$$ p(y, z  \\vert  \\theta) \\propto {y_{1} \\choose z} \\left (\\frac{1}{2} \\right )^{y_1-z} \\left(\\frac{\\theta}{4} \\right )^{z}  (1-\\theta)^{y_2+y_3}  \\, \\theta^{y_4}\n",
     "$$\n",
     "\n",
     "\n",
-    "Derived the joint posterior $p(\\theta, z | y)$ and sample from it using Gibbs sampling.\n",
+    "Derived the joint posterior $p(\\theta, z  \\vert  y)$ and sample from it using Gibbs sampling.\n",
     "\n",
     "Visualize the distribution of theta and, from this distribution, estimate the probability of obtaining a type 4 child plant (with the blue rings) in any cross-breeding experiment."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -106,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
