--- a/HW7/AM207_HW7.ipynb
+++ b/HW7/AM207_HW7.ipynb
@@ -72,8 +72,8 @@
     "  A possible set of correct final forms of your conditionals looks like the following:\n",
     "      \n",
     "\\begin{aligned}\n",
-    "p(\\theta_j | y_j, \\mu, \\sigma) &\\propto Gamma\\left(\\theta_j; y_j + \\alpha, \\beta + 5n_j\\right)\\\\\n",
-    "p(\\alpha, \\beta | y_j, \\theta_j, \\sigma^2) &\\propto \\prod_j\\theta_j^{\\alpha} \\exp\\left\\{ - \\beta\\sum_j \\theta_j \\right\\} * Gamma\\left(\\alpha; a, b \\right) * Gamma\\left(\\beta; c, d \\right) \\\\\n",
+    "p(\\theta_j | y, \\theta_{-j}, \\alpha, \\beta) &\\propto Gamma\\left(\\theta_j; y_j + \\alpha, \\beta + 5n_j\\right)\\\\\n",
+    "p(\\alpha, \\beta | y, \\theta) &\\propto \\Gamma(\\alpha)^{-N}\\beta^{N\\alpha}\\prod_j \\theta_j^{\\alpha}  \\exp\\left\\{ - \\beta\\sum_j \\theta_j \\right\\} * Gamma\\left(\\alpha; a, b \\right) * Gamma\\left(\\beta; c, d \\right) \\\\\n",
     "\\end{aligned}\n",
     "\n",
     "\n",
@@ -89,7 +89,7 @@
     "  - burn in: 10%\n",
     "  - thinning: 10\n",
     "  \n",
-    "  We do not guarantee convergence after 100,000 sets of samples under these conditions. In fact, ***convergence in a untweaked sampler is highly unlikely after only 100000 Gibbs sweeps***. \n",
+    "  We do not guarantee convergence after 100,000 sets of samples under these conditions. In fact, ***convergence in a untweaked sampler maybe unlikely after only 100,000 Gibbs sweeps***. \n",
     "\n",
     "  You are responsible for performing your own convergence tests and diagnostics.\n",
     "\n",
@@ -144,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
