--- a/AM207_HW9.ipynb
+++ b/AM207_HW9.ipynb
@@ -4,16 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **AM 207** Homework 9\n",
+    "# APMTH 207: Advanced Scientific Computing: \n",
+    "## Stochastic Methods for Data Analysis, Inference and Optimization\n",
+    "## Homework #9\n",
+    "**Harvard University**<br>\n",
+    "**Spring 2017**<br>\n",
+    "**Instructors: Rahul Dave**<br>\n",
+    "**Due Date: ** Friday, April 7th, 2017 at 11:59pm\n",
     "\n",
-    "This homework is designed so that you can work through the proababilistic aspects of machine learning, and to understand the choices being made when you carry out a classification."
+    "**Instructions:**\n",
+    "\n",
+    "- Upload your final answers as well as your iPython notebook containing all work to Canvas.\n",
+    "\n",
+    "- Structure your notebook and your work to maximize readability."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 1. Separate the bayesian irises"
+    "## Question 1. Separate the Bayesian Irises"
    ]
   },
   {
@@ -58,7 +68,7 @@
     "1. Choose a prior for $\\beta \\sim N(0, \\sigma^2 I) $ and write down the formula for the normalized posterior $p(\\beta| Y,X)$. \n",
     "2. Find the MAP estimate for the posterior on the training set.\n",
     "3. Implement a  sampler to sample from this posterior of $\\beta$.   Generate samples of $\\beta$ and plot the sequence of $\\beta$'s  and histograms for each $\\beta$ component.\n",
-    "4. Propagate both the MAP estimate and posterior on $\\beta$s to a set of probabilities and posterior distributions for each data point $x$ on the training set. Plot the posterior against the MAP estimate for 2-3 of your data points, preferably those with MAP estimates closer to 0.5."
+    "4. Use both the MAP estimate of $\\beta$ and the posterior distribution of $\\beta$ to generate a set of probabilities and a set of posterior distributions for each data point $x$ in the training set. Plot the posterior against the MAP estimate for 2 or 3 of your data points, preferably those with MAP estimates closer to 0.5."
    ]
   },
   {
@@ -67,7 +77,7 @@
    "source": [
     "---\n",
     "\n",
-    "Now that we have both a point estimate and posterior distribution on the probability of a sample being virginica, we can use these to make predictions on both the training set and test set.\n",
+    "Now that we have both a point estimate and a posterior distribution on the probability of a sample being virginica, we can use these to make predictions on both the training set and test set.\n",
     "\n",
     "**There are two ways to make these predictions, given an estimate of $p(y=1 \\vert x)$ **: \n",
     "\n",
@@ -85,11 +95,11 @@
     "\n",
     "## Part B: Playing about with probabilities\n",
     "\n",
-    "1. Plot the distribution of $p_{MEAN}$,$p_{CDF}$, and $p_{PP}$ over all the data points in the training set. How are these different?\n",
+    "1. Plot the distribution of $p_{MEAN}$, $p_{CDF}$, and $p_{PP}$ over all the data points in the training set. How are these different?\n",
     "2. Plot the posterior-predictive distribution of the misclassification rate with respect to the true class identities $y(x)$ of the data points $x$ (in other words you are plotting a histogram with the misclassification rate for the $n_{trace}$ posterior-predictive samples) on the training set.\n",
     "3. Make the same plot from the posterior, rather than the posterior predictive, by using the MLDT defined above. Overlay this plot on the previous one. That is, for every posterior sample, consider whether the data point ought to be classified as a 1 or 0 from the $p>0.5 \\implies y=1$ decision theoretic prespective. Compare with your previous diagram. Which case (from posterior-predictive or from-posterior) has a wider mis-classification distribution? \n",
     "4. Is the classification at the true training data points (you can think of this as a bitstring '100101...' 90 characters long) represented in the posterior predictive trace? If so, how many times? Is it the most frequent string in the traces? Explain your conclusions.\n",
-    "5. Repeat 2 and 3 for the test set, ie make predictions `:-)` . What do you find about the width of the distributions?\n",
+    "5. Repeat 2 and 3 for the test set, ie make predictions. What do you find about the width of the distributions?\n",
     " \n",
     "\n"
    ]
@@ -98,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part C: Deriving the MLDT\n",
+    "## Extra Credit: Deriving the MLDT\n",
     "\n",
     "If you took a distribution of prediction to your boss, he/she would probably ask you to make a choice. Decision Theory is the right way to make such a choice, rather than choosing an arbitrary set of bernoulli samplings. The idea is to minimize the posterior predictive averaged decision risk at each sample $x$:\n",
     "\n",
@@ -109,25 +119,35 @@
     "1. Show that if $R(1, x) <= R(0, x)$ and thus we choose 1 as our classification, $p(1 \\vert x) >= 0.5$. \n",
     "2. Use this MLDT rule and probabilities from both $p_{CDF}$ and $p_{PP}$ to make two classifications on the training set and test set. What is the misclassification rate in both? WHy do you think this is the case? "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
