--- a/Long_HW3/Long_HW3.ipynb
+++ b/Long_HW3/Long_HW3.ipynb
@@ -50,7 +50,7 @@
     "- Identify all the ways in which the task in bullet #2 might be difficult for a machine to accomplish. That is, break down the classification task into simple self-contained subtasks and identify how each subtask can be accomplished by a machine (which area of machine learning, e.g. topic modeling, sentiment analysis etc, addressess this type of task).\n",
     "\n",
     "\n",
-    "- Describe a complete pipeline for processing and transforming the data to obtain a classification for both food and service for each review. (You are welcome to use our schematics to help you do this)."
+    "- Describe a complete pipeline for processing and transforming the data to obtain a classification for both food and service for each review. (You are welcome to use our schema in Problem #2 to help you do this)."
    ]
   },
   {
@@ -63,15 +63,25 @@
     "\n",
     "The following is a full list of columns in the dataset and their meanings:\n",
     "\n",
-    "1. \"review_id\" - the unique identifier for each Yelp review\n",
-    "2. \"topic\" - the subject addressed by the review (0 stands for food and 1 stands for service)\n",
-    "3. \"rid\" - the unique identifier for each restaurant\n",
-    "4. \"count\" - the number of sentences in a particular review on a particular topic\n",
-    "5. \"mean\" - the probability of a sentence in a particular review on a particular topic being positive, averaged over total number of sentences in the review related to that topic.\n",
-    "6. \"var\" - the variance of the probability of a sentence in a particular review on a particular topic being positive, taken over all sentences in the review related to that topic.\n",
+    "I. Relevant to Part A and B:\n",
+    "\n",
+    "  1. \"review_id\" - the unique identifier for each Yelp review\n",
+    "  2. \"topic\" - the subject addressed by the review (0 stands for food and 1 stands for service)\n",
+    "  3. \"rid\" - the unique identifier for each restaurant\n",
+    "  4. \"count\" - the number of sentences in a particular review on a particular topic\n",
+    "  5. \"mean\" - the probability of a sentence in a particular review on a particular topic being positive, averaged over total number of sentences in the review related to that topic.\n",
+    "  6. \"var\" - the variance of the probability of a sentence in a particular review on a particular topic being positive, taken over all sentences in the review related to that topic.\n",
+    "  7. (only relevant\n",
+    "\n",
+    "II. Relevant (possibly) to Extra Credit:\n",
+    "\n",
+    "  1. \"uavg\" - the average star rating given by a particular reviewer (taken across all their reviews)\n",
+    "  2. \"stars\" - the number of stars given in a particular review\n",
+    "  3. \"max\" - the max probability of a sentence in a particular review on a particular topic being positive\n",
+    "  4. \"min\" - the min probability of a sentence in a particular review on a particular topic being positive\n",
     "\n",
     "The following schema illustrates the model of the raw data that is used to generate \"reviews_processed.csv\":\n",
-    "<img src=\"restaurant_model.pdf\">\n",
+    "<img src=\"restuarant_model.pdf\">\n",
     "\n",
     "***Warning:*** *this is a \"real\" data science problem in the sense that the dataset in \"reviews_processed.csv\" is large. We understand that a number of you have limited computing resources, so you are encouraged but not required to use the entire dataset. If you wish you may use 10 rows from the dataset, as long as your choice of 10 contains a couple of restaurants with a large number of reviews and a couple with a small number of reviews.*\n",
     "\n",
@@ -81,13 +91,21 @@
     "\n",
     "Following the SAT prep school example discussed in lab (and using your answers for Problem #1), set up a Bayesian model for a reviewer $i$'s opinion of restaurant $j$'s food and service, separately. That is, you will have a model for each restaurant and each aspect (food and serivce). For restaurant $j$, you will have a model for $\\{\\theta_{ij}^{\\text{food}}\\}$ and one for $\\{\\theta_{ij}^{\\text{service}}\\}$, where $\\theta_{ij}$ is the positivity of the opinion of the $i$-th reviewer regarding the $j$-th restaurant. \n",
     "\n",
-    "(**Hint:** what quantity in our data naturally corresponds to $\\bar{y}$'s in the prep school example? How would you calculate the parameter $\\sigma^2$ in the distribution of $\\bar{y}$ ($\\sigma^2$ is not provided explictly in the data?)\n",
+    "**Hint:** what quantity in our data naturally corresponds to $\\bar{y}$'s in the prep school example? How would you calculate the parameter $\\sigma^2$ in the distribution of $\\bar{y}$ (note that $\\sigma^2$ is not provided explictly in the data?)\n",
     "\n",
     "### Part B: Analysis for Each restaurant\n",
     "\n",
-    "Use your model to produce estimates for $\\theta_{ij}$'s. Pick a restaurant, for each aspect (\"food\" and \"service\"), plot your estimates for $\\theta$'s against the values in the \"mean\" column (corresponding to this restaurant. Use this plot to discuss the statistical benefits of modeling each reviewer's opinion as you did in Part A, rather than approximating the reviewer opinion with the value in \"mean\".\n",
+    "Use your model to produce estimates for $\\theta_{ij}$'s. Pick a few restaurants, for each aspect (\"food\" and \"service\") of each restaurant, plot your estimates for $\\theta$'s against the values in the \"mean\" column (corresponding to this restaurant. \n",
     "\n",
-    "### Part C: Analysis Across restaurants\n",
+    "For the same restaurants, for each aspect, generate shrinkage plots as follows:\n",
+    "\n",
+    "<img src=\"shrinkage.png\">\n",
+    "\n",
+    "The $x$-axis is the posterior means, the $y$-axis is classification probability (1-cdf) or fraction of predictive samples. The colored lines are error bars. (The code to generate this plot is included in this notebook.)\n",
+    "\n",
+    "Use these plots to discuss the statistical benefits of modeling each reviewer's opinion as you did in Part A, rather than approximating the reviewer opinion with the value in \"mean\".\n",
+    "\n",
+    "### Part C: Analysis Across Restaurants\n",
     "\n",
     "Aggregate, in a simple but reasonable way, the reviewer's opinions to given a pair of overall scores for each restaurant, one for food and one for service. Rank the restaurants by food score and then by service score. Discuss the statistical weakness of ranking by these scores.\n",
     "\n",
@@ -95,7 +113,7 @@
     "\n",
     "### Extra Credit:\n",
     "\n",
-    "Propose a model, that addresses the weakness of your approach in Part C, for the overall quality of food and service, separately, for each restaurant given the $\\theta$'s. Combine your model for the overall quality with your model for the $\\theta$'s. Use this combined model to estimate the overall quality of food and service for each restaurant.\n",
+    "Propose a model, that addresses the weakness of your approach in Part C, for the overall quality of food and service for each restaurant given the $\\theta$'s. Combine your model for the overall quality with your model for the $\\theta$'s. Use this combined model to estimate the overall quality of food and service for each restaurant.\n",
     "\n",
     "(**Hint:** Homework #7 might be a good reference for building your model for overall quality of food and service)\n"
    ]
@@ -109,22 +127,34 @@
    "outputs": [],
    "source": [
     "import itertools\n",
-    "def shrinkage_plot(data):\n",
-    "    data = zip()\n",
+    "\n",
+    "# fix a restaurant and an aspect (food or service)\n",
+    "# \"means\" is the array of values in the \"mean\" column for the restaurant and the aspect \n",
+    "#         in the dataset\n",
+    "# \"thetas\" is the array of values representing your estimate of the opinions of reviewers \n",
+    "#          regarding this aspect of this particular restaurant\n",
+    "# \"theta_vars\" is the array of values of the varaiances of the thetas\n",
+    "# \"counts\" is the array of values in the \"count\" column for the restaurant and the aspect \n",
+    "#.         in the dataset\n",
+    "\n",
+    "def prob_shrinkage_plot(means, thetas, theta_vars, counts):\n",
+    "    data = zip(means, thetas, theta_vars / counts, theta_vars, counts)\n",
     "    palette = itertools.cycle(sns.color_palette())\n",
     "    with sns.axes_style('white'):\n",
     "        for m,t, me2, te2, c in data:\n",
-    "            color=next(palette)\n",
-    "            noise=0.04*np.random.randn()\n",
-    "            noise2=0.04*np.random.randn()\n",
-    "            plt.plot([m,t],[noise,1+noise2],'o-', color=color, lw=1)\n",
-    "            if me2==0:\n",
-    "                me2=4\n",
-    "            plt.errorbar([m,t],[noise,1+noise2], xerr=[np.sqrt(me2), np.sqrt(te2)], color=color,  lw=1)\n",
-    "        plt.yticks([])\n",
-    "        plt.xlim([0,1])\n",
-    "        sns.despine(offset=-2, trim=True, left=True)\n",
-    "    return plt.gca()"
+    "            color = next(palette)\n",
+    "            noise = 0.001 * np.random.randn()\n",
+    "            noise2 = 0.001 * np.random.randn()\n",
+    "            if me2 == 0:\n",
+    "                me2 = 4\n",
+    "            p = prob(m, me2, 1.)\n",
+    "            peb = prob(t, te2, 1.)\n",
+    "            plt.plot([m, t],[p, peb],'o-', color=color, lw=1)\n",
+    "            plt.errorbar([m, t],[p + noise, peb + noise2], xerr=[np.sqrt(me2), np.sqrt(te2)], color=color, lw=1)\n",
+    "        ax = plt.gca()\n",
+    "        plt.xlim([0, 1])\n",
+    "        plt.ylim([0, 1.05])\n",
+    "    return ax"
    ]
   }
  ],
